# ufc-fight-analytics

./: .gitignore  Justfile  README.md  pyproject.toml
data/: fighters_2026-02-20.csv
data/2026-02-27/: fight_stats.csv  fighters.csv  fights.csv  missing_fighters.csv
data/2026-03-18/: fight_stats.csv  pending_fighters.csv
data/2026-03-18/prepared/: feature_cols.csv  fighter_features.csv  test.csv  train.csv
data/2026-03-18/raw/: fighters.csv  fights.csv
models/2026-03-18/: gradient_boosting.joblib
notebooks/: fight_prediction_model.ipynb  fight_prediction_prep.ipynb  predict.ipynb
src/: scrape_ufc_fights.py  scrape_ufc_stats.py  validate_fighters.py
